mejora en mensajes de pruebas unitarias e incorporar modelo en interfaz

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
     <div class="respuesta" id="respuesta">
       <p id="texto-respuesta"></p>
     </div>
+
+    <p style="text-align:center; color:#aaa; font-size:0.75rem; margin-top:24px;">
+      Modelo: llama-3.3-70b-versatile · Groq
+    </p>
   </div>
 
   <script>
